--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTML Style</title>
+  </head>
+  <body>
+    <!-- style -->
+    <p style="color: red">This is a paragraph</p>
+    <p style="font-size: 20px">This is a paragraph</p>
+    <!-- style -->
+
+    <!-- bold -->
+    <p>This is <b>paragraph</b></p>
+    <!-- bold -->
+
+    <!-- strong -->
+    <p>This is <strong>paragraph</strong></p>
+    <!-- strong -->
+
+    <!-- i  -->
+    <p>This is <i>paragraph</i></p>
+    <!-- i  -->
+
+    <!-- em -->
+    <p>This is a <em>emphasized paragraph</em></p>
+    <!-- em -->
+
+    <!-- mark -->
+    <p>This is a <mark>marked paragraph</mark></p>
+    <!-- mark -->
+
+    <!-- small -->
+    <p>This is a <small>small paragraph</small></p>
+    <!-- small -->
+
+    <!-- del -->
+    <p>This is a <del>Deleted paragraph</del></p>
+    <!-- del -->
+
+    <!-- ins -->
+    <p>This is a <ins>Inserted paragraph</ins></p>
+    <!-- ins -->
+
+    <!-- sub  -->
+    <p>This is a <sub>subscripted paragraph</sub></p>
+    <!-- sub  -->
+
+    <!-- sup  -->
+    <p>This is a <sup>superscripted paragraph</sup></p>
+    <!-- sup  -->
+  </body>
 </html>
