--- a/index.html
+++ b/index.html
@@ -50,5 +50,26 @@
     <!-- sup  -->
     <p>This is a <sup>superscripted paragraph</sup></p>
     <!-- sup  -->
+
+    <!-- blockquote  -->
+    <blockquote cite="http://www.worldwildlife.org/who/index.html">
+      For 60 years, WWF has worked to help people and nature thrive. As the
+      world's leading conservation organization, WWF works in nearly 100
+      countries. At every level, we collaborate with people around the world to
+      develop and deliver innovative solutions that protect communities,
+      wildlife, and the places in which they live.
+    </blockquote>
+    <!-- blockquote  -->
+
+    <!-- quote  -->
+    <p>This ia a quote, <q>Holi hai 24/03/2024 </q></p>
+    <!-- quote  -->
+
+    <!-- abbr  -->
+    <p>
+      The <abbr title="World Health Organization">WHO</abbr> was founded in
+      1948.
+    </p>
+ 
   </body>
 </html>
